# C32JavaRuntime

./: README.md  pom.xml  test.c32  test2.c32  test3.c32
c32/: AST.json  Figures.json  test.c32
c32/src/: test.c32  test0.c32  test2.c32
c32/src/std/: Core.c32  Memory.c32  global.c32
native/: CMakeLists.txt  Memory.cpp  c32_extern_Memory.h  c32_extern_SMMalloc.h  c32_extern_SMMalloc_CacheWarmupOptions.h  c32_memory_Memory.h  c32_memory_SMMalloc.h  c32_memory_SMMalloc_CacheWarmupOptions.h  compile.bat
native/smmalloc/: smmalloc.cpp  smmalloc.h
native/windows/: c32rt.exp  c32rt.lib  c32rt_64.exp  c32rt_64.lib
src/main/java/c32/: Runtime.java  Unsigned.java
src/main/java/c32/compiler/: C32Program.java  Compiler.java  CompilerConfig.java  CompilerException.java  FunctionDeclNotFoundException.java  IntrinsicFunctionTable.java  Location.java  Preprocessor.java
src/main/java/c32/compiler/ast/: ASTBuilder.java  AmbiguousFunctionCallException.java  CompilationUnitTree.java  FunctionContainer.java  FunctionDeclarationTree.java  FunctionImplTree.java  InvokeExprTree.java  Modifiers.java  NoUnsignedTypeException.java  NumberExprTree.java  ReturnStatementTree.java  ReturnTree.java  StatementTree.java  StructTypeTree.java  Tree.java  VariableContainer.java  VariableDeclNotFoundException.java  VariableDeclarationTree.java  VariableExprTree.java
src/main/java/c32/compiler/codegen/: Generator.java  LinkerException.java
src/main/java/c32/compiler/except/: CompilerException.java  (+1 more)
src/main/java/c32/memory/: Memory.java  SMMalloc.java
src/test/java/: Main.java
(+182 files in other folders)
